--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
      <p>Primeiro-Projeto-DIO </p>   <br>
  
 
-<p> Link do repositório : <a href="https://github.com/RKCAD/dio-desafio-github-primeiro-repositorio.git" target="_blank"> https://github.com/RKCAD/dio-desafio-github-primeiro-repositorio.git</a></p><br>
+<p> Link do repositório : <a href="https://github.com/RKCAD/dio-desafio-github-primeiro-repositorio.git" target="_blank"> https://github.com/RKCAD/dio-desafio-github-primeiro-repositorio.git</a> feito como aprendizado</p><br>
 
 <p> Comandos basicos adiquiridos </p><br>
 <ul>
-<li> 1º analisar os arquivos dando um <strong>git status </strong></li>
+    <li>procurar o diretório utilizando <strong> cd .. para retornar e cd nome/ para avançar</strong> </li>
+    <li> Depois pode-se criar um repositório direto no Github e clonar no seu local, por meio do <strong> git Clone "link gerado pelo Github"</strong></li> 
+<li> adicionar manualmente os arquivo dentro da pasta</li>
+<li> criar a pasta de controle do git com <strong> Git init </strong> </li>
+    <li> 1º analisar os arquivos dando um <strong>git status </strong></li>
 <li> 2º dar um <strong>git add *</strong>  para adicionar os itens modificados e 
 os itens estão prontos para ir ao controle de versão</li>
 <li> 3º dar um <strong>git commit -m “comentario” </strong> 
 Depois disso ira entender que é pra ir pro local e o comentario para fornecer informações, mas ainda não estará no servidor, </li>
-<li> 4º dar um <strong>push origin main</strong> (ou master)  
+<li> 4º dar um <strong>push origin main</strong>   
 Agora sim ira subir pro servidor remoto </li>
 </ul>    
 </div>
